files/base/pihole/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  labels:
    app: pihole
    auto-update-hour: '00'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pihole
    spec:
      dnsConfig:
        nameservers:
          - 127.0.0.1
          - 9.9.9.9
      containers:
        - name: pihole
          image: docker.io/pihole/pihole:latest
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - NET_ADMIN
          ports:
            - name: web
              containerPort: 80
            - name: dns
              containerPort: 53
            - name: dhcp
              containerPort: 67
          volumeMounts:
            - name: pihole
              mountPath: /etc/pihole
              subPath: etc-pihole
            - name: pihole
              mountPath: /etc/dnsmasq.d
              subPath: etc-dnsmasq.d
      volumes:
        - name: pihole
          persistentVolumeClaim:
            claimName: pihole

---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-tcp
  labels:
    app: pihole
spec:
  type: LoadBalancer
  selector:
    app: pihole
  loadBalancerSourceRanges:
    - 10.0.0.0/8
    - 172.16.0.0/12
    - 192.168.0.0/16
  ports:
    - protocol: TCP
      name: dns-tcp
      port: 53

---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-udp
  labels:
    app: pihole
spec:
  type: LoadBalancer
  selector:
    app: pihole
  loadBalancerSourceRanges:
    - 10.0.0.0/8
    - 172.16.0.0/12
    - 192.168.0.0/16
  ports:
    - protocol: UDP
      name: dns-udp
      port: 53

---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dhcp
  labels:
    app: pihole
spec:
  type: LoadBalancer
  selector:
    app: pihole
  loadBalancerSourceRanges:
    - 10.0.0.0/8
    - 172.16.0.0/12
    - 192.168.0.0/16
    - 0.0.0.0/32
  ports:
    - protocol: UDP
      name: dhcp
      port: 67

---
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
  labels:
    app: pihole
spec:
  selector:
    app: pihole
  ports:
    - protocol: TCP
      name: web
      port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  labels:
    app: pihole
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`pihole.192.168.56.11.nip.io`)"
      middlewares:
        - name: auth-private-service
          namespace: traefik
      services:
        - kind: Service
          name: pihole-web
          port: 80
